# PageR

./: .gitignore  Dockerfile  README.md  env_for_Docker  pyproject.toml  rez.json  set_config.py
apis/file2phis/: app.py
apis/img2json/: api.py
apis/pdf2json/: api.py
docs/: .gitignore  README.md
docs/source/: conf.py  index.rst  pager_json.rst
examples/: doc_model.ipynb  glam.ipynb  graphs.ipynb  pdf2one_region.ipynb  pdf_model.py  pipe_lines.ipynb  r.json  read_img.py  read_pdf.py  seg_benchmark.py  words2rows.ipynb
examples/seg_data/: result.json
models/: download_models.py  glam_128_edge_linear  glam_config_model_20250219.json  glam_config_model_pdf_70epoch.json  glam_edge_model_20250219  glam_edge_model_20250222  glam_edge_model_20250225  glam_edge_model_45k_loss40  glam_edge_model_pdf_70epoch  glam_model_20250415  glam_model_publaynet_20250416  glam_node_model_20250222  glam_node_model_20250225  glam_node_model_pdf_70epoch  glam_node_model_pdf_loss17  style_classmodel_20250121
models/Rows2Regions/: row2region_GLAM_20251106  row2region_GLAM_20251111  row2region_GLAM_20251113  row2region_GLAM_20251203  row2region_GLAM_20260113
models/Words2Rows/: words2rows_glam_20251023  (+2 more)
src/: pr.py
tests/: test_WordsToDBSCANBlocks.py  test_cnn_style_model.py  test_image.py  test_image2word.py  test_image2words_and_styles.py  test_merge_segment.py  test_ms_word_model.py  test_pdf.py  test_pdf2words.py  test_pdf2words_and_styles.py  test_phis_model.py  test_region.py  test_rowGLAM.py  test_sort_read.py  test_sort_triangle_block.py  test_word2phis_model.py  test_word2region_model.py  test_word2spgraph.py  test_words2GNNp_linear.py  test_words2rowGLAM.py  test_words_and_styles.py  test_words_and_styles2phis_model.py  test_words_and_styles2sp_graph.py
(+199 files in other folders)
