[build-system]
requires = ['setuptools', 'wheel', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[project]
name='pager'
authors = [{name='Kopylov Daniil', email='it-daniil@yandex.ru'}]

readme = 'README.md'
license = {file = 'LICENSE'}

requires-python = '>=3.9'

dependencies = [
  'pytesseract',
  'pdf2image',
  'numpy',
  'opencv-python',
  'matplotlib',
  'python-docx',
  'scipy',
  'scikit-learn',
  'transformers',
  'torch',
  'torch-geometric',
  'torchmetrics[detection]',
  'python-dotenv',
  'fastapi',
  'uvicorn',
  'python-multipart'
]

version = '0.0.3' 

[tool.setuptools]
packages = {find = {where = ["src"]}}
package-dir = {"pager" = "src/pager"}

[project.scripts]
pager-install-models = "pager.nn_models.sys_model_manager:download_models"